[package]
name = "ramp_games"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
include_dir = { version = "0.7.4", features = ["glob"] }
pelican_ui = {path = "../pelican_ui" }
pelican_ui_std = { path = "../pelican_ui_std" }
serde = "1.0.219"
pelican_game_engine = {path = "../pelican_game_engine"}
uuid = "1.17.0"
rand = "0.9.1"
once_cell = "1.21.3"
serde_json = "1.0.140"
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
local-ip-address = "0.6.5"
tungstenite = "0.27.0"

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]
